--- a/site-aula/index.html
+++ b/site-aula/index.html
@@ -9,5 +9,15 @@
     <h1>Bem vindo ao meu primeiro site</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad officiis quas accusantium aut ipsam, unde, suscipit corporis nostrum excepturi, vel illum nobis quia delectus molestias amet sequi. Ut, modi vero!</p>
+
+    <main>
+        <head>
+            <h1>Curso Git e GitHub do cursos em vídeos3</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio unde ad impedit maiores quidem tempora, minus repellat fuga laudantium obcaecati dignissimos eveniet quis temporibus! Suscipit, qui quo. Laborum, cumque?
+            </p>
+        </head>
+    </main>
+
 </body>
 </html>
