--- a/site-aula/index.html
+++ b/site-aula/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula site repositório</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <h1>Bem vindo ao meu primeiro site</h1>
